<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <!-- Header Section -->
    <LinearLayout
        android:id="@+id/headerSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <!-- Image and Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            
            
            <TextView
                android:id="@+id/recipeTitle"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/green"
                android:text="@string/default_title"/>
        </LinearLayout>
        
        <!-- Time and Calories -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/preparationTimeIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_launcher_foreground"/>
                    
                <TextView
                    android:id="@+id/recipePreparationTime"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/default_preparation_time"/>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/caloriesIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_launcher_foreground"/>
                    
                <TextView
                    android:id="@+id/calories"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/default_calories"/>
            </LinearLayout>
        </LinearLayout>
        
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <!-- Ingredients Section -->
            <LinearLayout
                android:id="@+id/ingredientsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    
                    <TextView
                        android:id="@+id/ingredientsHeadline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/ingredients_headline"/>
                    
                </LinearLayout>
                
                <TextView
                    android:id="@+id/textViewIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/default_ingredients"/>
            </LinearLayout>
            <!-- Instructions Section -->
            <LinearLayout
                android:id="@+id/instructionsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                
                <TextView
                    android:id="@+id/instructionsHeadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/instructions_headline"/>
                
                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/default_instructions"/>
            </LinearLayout>
            <!-- Nutrients Section -->
            <LinearLayout
                android:id="@+id/nutrientsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    
                    <TextView
                        android:id="@+id/macroNutrientsHeadline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/macro_nutrients_headline"/>
                    
                </LinearLayout>
                
                
                <TextView
                    android:id="@+id/vitaminsHeadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/vitamins_headline"/>
                
                <TextView
                    android:id="@+id/vitamins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:text="@string/default_vitamins"/>
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>
